--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -35,7 +35,7 @@
                 <span class="gip">2.00€</span>
             </div>
             <div class="gm">
-                <span class="gi">Caffe nach Whal</span>
+                <span class="gi">Kaffee nach Wahl</span>
                 <span class="gip">5.00€</span>
             </div>
             <div class="gm">
@@ -43,18 +43,18 @@
                 <span class="gip">4.50€</span>
             </div>
             <div class="gm">
-                <span class="gi">Tee nach Whal</span>
+                <span class="gi">Tee nach Wahl</span>
                 <span class="gip">6.40€</span>
             </div>
         </p>
         <p id="sp">
             <h3>Speisen:</h3>
             <div class="sm">
-                <span class="si">Omelett mit Schinen und Paprikastückchen</span>
+                <span class="si">Omelette mit Schinken und Paprikastückchen</span>
                 <span class="sip">10.00€</span>
             </div>
             <div class="sm">
-                <span class="si">Schinken Brot</span>
+                <span class="si">Schinkenbrot</span>
                 <span class="sip">8.20€</span>
             </div>
             <div class="sm">
@@ -77,7 +77,7 @@
                 <span class="suip">11.99€</span>
             </div>
             <div class="sum">
-                <span class="sui">Kaiserschmarrn mit Rousienen</span>
+                <span class="sui">Kaiserschmarrn mit Rosinen</span>
                 <span class="suip">13.20€</span>
             </div>
         </p>
