--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -20,7 +20,7 @@
         <div><h3><b>Öffnungszeiten:</b></h3></div>
         <div>MO-FR: 09:00-20:00Uhr <br> SA: 09:00-18:00Uhr</div>
         <div><h3><b>Standort:</b></h3></div>
-        <div>Kirschbaumalle 3/580 Gemsberg</div>
+        <div>Kirschbaumallee 3/5801 Gemsberg</div>
     </section>
     <section id="spk">
         <h2 id="eat">Speisekarte:</h2>
