--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -16,79 +16,87 @@
     </header>
 </head>
 <body>
-    <section id="home">
-        <div><h3><b>Öffnungszeiten:</b></h3></div>
-        <div>MO-FR: 09:00-20:00Uhr <br> SA: 09:00-18:00Uhr</div>
-        <div><h3><b>Standort:</b></h3></div>
-        <div>Kirschbaumallee 3/5801 Gemsberg</div>
-    </section>
-    <section id="spk">
-        <h2 id="eat">Speisekarte:</h2>
-        <p id="g">
-            <h3>Getränke:</h3>
-            <div class="gm">
-                <span class="gi">Wasser still/prickelnd</span>
-                <span class="gip">1.50€</span>
-            </div>
-            <div class="gm">
-                <span class="gi">Coca Cola</span>
-                <span class="gip">2.00€</span>
-            </div>
-            <div class="gm">
-                <span class="gi">Kaffee nach Wahl</span>
-                <span class="gip">5.00€</span>
-            </div>
-            <div class="gm">
-                <span class="gi">Heiße Schokolade</span>
-                <span class="gip">4.50€</span>
-            </div>
-            <div class="gm">
-                <span class="gi">Tee nach Wahl</span>
-                <span class="gip">6.40€</span>
-            </div>
-        </p>
-        <p id="sp">
-            <h3>Speisen:</h3>
-            <div class="sm">
-                <span class="si">Omelette mit Schinken und Paprikastückchen</span>
-                <span class="sip">10.00€</span>
-            </div>
-            <div class="sm">
-                <span class="si">Schinkenbrot</span>
-                <span class="sip">8.20€</span>
-            </div>
-            <div class="sm">
-                <span class="si">Käsespätzle mit Röstzwiebeln</span>
-                <span class="sip">13.80€</span>
-            </div>
-            <div class="sm">
-                <span class="si">Schnitzel von Schwein/Pute mit Pommes/Kartoffeln</span>
-                <span class="sip">15.90€</span>
-            </div>
-        </p>
-        <p id="suep">
-            <h3>Süßspeisen:</h3>
-            <div class="sum">
-                <span class="sui">Kuchen nach Wahl</span>
-                <span class="suip">9.20€</span>
-            </div>
-            <div class="sum">
-                <span class="sui">Palatschinken mit Marillenmarmelade und Schokosoße</span>
-                <span class="suip">11.99€</span>
-            </div>
-            <div class="sum">
-                <span class="sui">Kaiserschmarrn mit Rosinen</span>
-                <span class="suip">13.20€</span>
-            </div>
-        </p>
-
-    </section>
-    <section id="feed">
-        <h2>Geben Sie uns Feedback!</h2>
-        <textarea class="input_text" placeholder="Geben Sie hier Ihre Rezension ein..."></textarea>
-        <p>
-            <button type="button"><a href="#home">Senden</a></button>
-        </p>
-    </section>
+    <main>
+        <section id="home">
+            <aside>
+                <div><h3><b>Öffnungszeiten:</b></h3></div>
+                <div>MO-FR: 09:00-20:00Uhr <br> SA: 09:00-18:00Uhr</div>
+                <div><h3><b>Standort:</b></h3></div>
+                <div>Kirschbaumallee 3/5801 Gemsberg</div>
+            </aside>
+        </section>
+        <section id="spk">      <!--span command mithilfe von KI einsatz-->
+            <h2 id="eat">Speisekarte:</h2>
+            <p id="g">
+                <h3>Getränke:</h3>
+                <div class="gm">
+                    <span class="gi">Wasser still/prickelnd</span>
+                    <span class="gip">1.50€</span>
+                </div>
+                <div class="gm">
+                    <span class="gi">Coca Cola</span>
+                    <span class="gip">2.00€</span>
+                </div>
+                <div class="gm">
+                    <span class="gi">Kaffee nach Wahl</span>
+                    <span class="gip">5.00€</span>
+                </div>
+                <div class="gm">
+                    <span class="gi">Heiße Schokolade</span>
+                    <span class="gip">4.50€</span>
+                </div>
+                <div class="gm">
+                    <span class="gi">Tee nach Wahl</span>
+                    <span class="gip">6.40€</span>
+                </div>
+            </p>
+            <p id="sp">     
+                <h3>Speisen:</h3>
+                <div class="sm">
+                    <span class="si">Omelette mit Schinken und Paprikastückchen</span>
+                    <span class="sip">10.00€</span>
+                </div>
+                <div class="sm">
+                    <span class="si">Schinkenbrot</span>
+                    <span class="sip">8.20€</span>
+                </div>
+                <div class="sm">
+                    <span class="si">Käsespätzle mit Röstzwiebeln</span>
+                    <span class="sip">13.80€</span>
+                </div>
+                <div class="sm">
+                    <span class="si">Schnitzel von Schwein/Pute mit Pommes/Kartoffeln</span>
+                    <span class="sip">15.90€</span>
+                </div>
+            </p>
+            <p id="suep">
+                <h3>Süßspeisen:</h3>
+                <div class="sum">
+                    <span class="sui">Kuchen nach Wahl</span>
+                    <span class="suip">9.20€</span>
+                </div>
+                <div class="sum">
+                    <span class="sui">Palatschinken mit Marillenmarmelade und Schokosoße</span>
+                    <span class="suip">11.99€</span>
+                </div>
+                <div class="sum">
+                    <span class="sui">Kaiserschmarrn mit Rosinen</span>
+                    <span class="suip">13.20€</span>
+                </div>
+            </p>
+        </section>
+        <section id="feed">
+            <h2>Geben Sie uns Feedback!</h2>
+            <textarea class="input_text" placeholder="Geben Sie hier Ihre Rezension ein..."></textarea>
+            <p>
+                <button type="button"><a href="#home">Senden</a></button>
+            </p>
+        </section>
+        <footer>
+            <p>
+                &copy; 2025/26 Café Holzmann
+            </p>
+        </footer>
+    </main>
 </body>
 </html>
