--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -92,9 +92,9 @@
                 <button type="button"><a href="#home">Senden</a></button>
             </p>
         </section>
-        <footer>
+        <footer id="foot">
             <p>
-                &copy; 2025/26 Café Holzmann
+                <div>&copy; 2025/26 Café Holzmann</div>
             </p>
         </footer>
     </main>
