--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -93,7 +93,7 @@
             </p>
         </section>
         <footer id="foot">
-            <p>
+            <p id="footp">
                 <div>&copy; 2025/26 Café Holzmann</div>
             </p>
         </footer>
