--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caffe Holzbar</title>
-    <link rel="stylesheet" href="./Css/theme-light.css">
+    <link rel="stylesheet" href="./Css/theme-accent.css">
     <header>
         <h1><b> <a href="#home">Café Holzmann</a></b></h1>
         <nav>
@@ -19,10 +19,10 @@
     <main>
         <section id="home">
             <aside>
-                <div><h3><b>Öffnungszeiten:</b></h3></div>
-                <div>MO-FR: 09:00-20:00Uhr <br> SA: 09:00-18:00Uhr</div>
-                <div><h3><b>Standort:</b></h3></div>
-                <div>Kirschbaumallee 3/5801 Gemsberg</div>
+                <div><h3><b class="home">Öffnungszeiten:</b></h3></div>
+                <div class="home">MO-FR: 09:00-20:00Uhr <br> SA: 09:00-18:00Uhr</div>
+                <div><h3><b class="home">Standort:</b></h3></div>
+                <div class="home">Kirschbaumallee 3/5801 Gemsberg</div>
             </aside>
         </section>
         <section id="spk">      <!--span command mithilfe von KI einsatz-->
@@ -94,7 +94,7 @@
         </section>
         <footer id="foot">
             <p id="footp">
-                <div>&copy; 2025/26 Café Holzmann</div>
+                <div id="button">&copy; 2025/26 Café Holzmann</div>
             </p>
         </footer>
     </main>
