--- a/WMC/Caffe Holzbar/index.html
+++ b/WMC/Caffe Holzbar/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caffe Holzbar</title>
-    <link rel="stylesheet" href="./Css/theme-accent.css">
+    <link rel="stylesheet" href="./Css/theme-light.css">
     <header>
         <h1><b> <a href="#home">Café Holzmann</a></b></h1>
         <nav>
