--- a/WMC/Name/JurassicPark.html
+++ b/WMC/Name/JurassicPark.html
@@ -15,6 +15,7 @@
     <nav>
         <ul>
             <li><a href="./index.html">HOME</a></li>
+            <li><input type="search" placeholder="Suchen"></li>
             <li>
                 <aside>
                     <ul>
