--- a/WMC/JP/JurassicPark.html
+++ b/WMC/JP/JurassicPark.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html id="JurassicPark">
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Jurassic Park</title>
     <link rel="stylesheet" href="./CSS/stylesheet.css">
 </head>
 <body>
@@ -92,9 +92,10 @@
 
         <section class="dinosaur" id="parasaurolophus">
             <h2>Parasaurolophus</h2>
+            <img src="./Bilder_Videos/Parasaurolophus.png" alt="">
             <div class="txt">
                 <h3>Auftritt im Film</h3>
-                <p>am anfang nur kurz zu sehen</p>
+                <p>am Anfang nur kurz zu sehen</p>
                 <h3>Wissenschaftliche Fakten</h3>
                 <p>Der Parasaurolophus ist ein, zur Gruppe der Ornithischia(Vogelbeckendinosaurier) gehörender, friedlicher Pflanzenfresser der zur Gattung der Hadrosaurien gehörte. Seine Besonderheit war die langen Kamm auf dem Kopf (ca. 1,5 Meter), welcher Wahrscheinlich zur Kommunikation, Temperaturregelung oder zur Balz diente</p>
             </div>
@@ -120,6 +121,7 @@
 
         <section class="dinosaur" id="dilophosaurus">
             <h2>Dilophosaurus</h2>
+            <img src="./Bilder_Videos/Dilophosaurus.png" alt="">
             <div class="txt">
                 <h3>Auftritt im Film</h3>
                 <p>Ca. 2 Meter großer Fleischfresser mit zwei Kämmen auf dem Kopf und einer Halskrause, der seine Feinde mit seinem Giftigen Speichel bespuckt</p>
@@ -148,6 +150,7 @@
 
         <section class="dinosaur" id="triceratops">
             <h2>Triceratops</h2>
+            <img src="./Bilder_Videos/Triceratops.png" alt="">
             <div class="txt">
                 <h3>Auftritt im Film</h3>
                 <p> Rund 9 Meter langer Pflanzenfressender Dinosaurier mit drei Hörnern auf dem Kopf, zwei an der stirn und eines auf der Nase. Wird vom Tierarzt untersucht</p>
@@ -175,6 +178,7 @@
         </section>
         <section class="dinosaur" id="tyrannosaurusrex">
             <h2>Tyrannosaurus Rex</h2>
+            <img src="./Bilder_Videos/T-Rex.png" alt="">
             <div class="txt">
                 <h3>Auftritt im Film</h3>
                 <p>Großer, furchteinflößender Fleschfresser mit langen Scharfen Reißzähnen</p>
@@ -203,6 +207,7 @@
 
         <section class="dinosaur" id="gallimimus">
             <h2>Gallimimus</h2>
+            <img src="./Bilder_Videos/Gallimimus.png" alt="">
             <div class="txt">
                 <h3>Auftritt im Film</h3>
                 <p>Ein flinker, zweibeiniger Dinosaurier mit langen Beinen und einem langen, schmalen Kopf</p>
